- rpm/kernel-binary.spec.in: obsolete %name-base <= 2.6.30-1   (bnc#530752).

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -70,18 +70,8 @@ BuildRequires:  fdupes
 Provides:       %{name}_%_target_cpu = %version-%release
 %if %split_base
 Provides:       kernel-base = %version-%source_rel
-# Disabled for now, as the update doesn't work as expected.
-#Provides:       %name-base = %version-%release
-#Obsoletes:      %name-base <= %version-%release
-# What we want is
-# 11.1      -> 11.2
-# base,main -> main
-# base      -> base
-# If you know how to solve this via rpm dependencies, I'll buy you a
-# chocolate ;).
-# For now the base subpackage will be also updated, but it shouldn't cause any
-# new problems (the overlaping files are identical). New installs will only
-# have the main package.
+# 2.6.30-1 was the last package with split -base
+Obsoletes:      %name-base <= 2.6.30-1
 %endif
 Requires(pre):  coreutils awk
 Requires(post): module-init-tools
