- patches.drivers/alsa-hda-[0-9]*: Delete, fold into a single patch   patches.drivers/alsa-hda-2.6.32-pre

--- a/series.conf
+++ b/series.conf
@@ -455,46 +455,7 @@
 	patches.drivers/alsa-midi-04-oss-remove-magic-numbers
 
 	# more udpates
-	patches.drivers/alsa-hda-01-Don-t-call-snd_hda_codec_configure
-	patches.drivers/alsa-hda-02-Add-patch-module-option
-	patches.drivers/alsa-hda-03-Check-beep-hint
-	patches.drivers/alsa-hda-04-Merge-patch_alc882-and-patch_alc883
-	patches.drivers/alsa-hda-05-Fix-input-pinctl-for-ALC882-auto-mode
-	patches.drivers/alsa-hda-06-Allow-FLOAT-PCM-format
-	patches.drivers/alsa-hda-07-Add-missing-mixer-amp-initialization
-	patches.drivers/alsa-hda-08-Manually-expand-alc882_init_verbs
-	patches.drivers/alsa-hda-09-Don-t-override-maxbps-for-FLOAT
-	patches.drivers/alsa-hda-10-Add-quirks-for-RTL888-RV630-M76
-	patches.drivers/alsa-hda-11-Fix-the-merge-error
-	patches.drivers/alsa-hda-12-Check-codec-errors-in-connections
-	patches.drivers/alsa-hda-13-Add-CX20582-and-OLPC-XO-1.5-support
-	patches.drivers/alsa-hda-14-Add-support-for-new-AMD-HD-audio-devices
-	patches.drivers/alsa-hda-15-add-bounds-checking-for-the-codec-cmds
-	patches.drivers/alsa-hda-16-Fix-the-previous-sanity-check
-	patches.drivers/alsa-hda-17-Fix-ALC268-parser-for-mono-speaker
-	patches.drivers/alsa-hda-18-Reduce-click-noise-at-power-saving
-	patches.drivers/alsa-hda-19-Fix-ALC861-auto-mode-parser
-	patches.drivers/alsa-hda-20-do-not-read-connections-for-widged
-	patches.drivers/alsa-hda-21-use-AC_WCAP_CONN_LIST
-	patches.drivers/alsa-hda-23-Cleanups-for-widget-connection-list
-	patches.drivers/alsa-hda-25-Add-better-Intel-IbexPeak-platform-support
-	patches.drivers/alsa-hda-27-Introduce-get_wcaps_type-macro
-	patches.drivers/alsa-hda-28-Add-exception-for-volume-knob
-	patches.drivers/alsa-hda-32-Reword-auto-probe-messages
-	patches.drivers/alsa-hda-33-IDT-codec-updates
-	patches.drivers/alsa-hda-34-add-2channel-to-ALC889
-	patches.drivers/alsa-hda-35-add-HP-automute-to-ALC889
-	patches.drivers/alsa-hda-36-add-CS420x-support
-	patches.drivers/alsa-hda-37-fix-IbexPeak-HDMI
-	patches.drivers/alsa-hda-40-auto-mic-support-for-realtek
-	patches.drivers/alsa-hda-41-msi-white-list
-	patches.drivers/alsa-hda-42-hp-more-quirk
-	patches.drivers/alsa-hda-43-realtek-preset-setup
-	patches.drivers/alsa-hda-44-realtek-preset-cleanup
-	patches.drivers/alsa-hda-45-alc268-dmic-rec-fix
-	patches.drivers/alsa-hda-46-stac-lo-detect-fix
-	patches.drivers/alsa-hda-47-idt92hd8x-fix
-	patches.drivers/alsa-hda-48-alc268-oops-fix
+	patches.drivers/alsa-hda-2.6.32-pre
 
 	patches.drivers/alsa-ctxfi-01-Native-timer-support-for-emu20k2
 	patches.drivers/alsa-ctxfi-03-Simple-code-clean-up
