- patches.drivers/alsa-hda-fix-01-add-missing-mux-for-vt1708:   ALSA: hda - Add missing mux check for VT1708 (bnc#534904). - patches.drivers/alsa-hda-fix-02-mbp31-hp-fix: ALSA: hda -   Fix MacBookPro 3,1/4,1 quirk with ALC889A. - patches.drivers/alsa-hda-2.6.32-pre: Refresh.

--- a/series.conf
+++ b/series.conf
@@ -455,6 +455,9 @@
 	patches.drivers/alsa-midi-04-oss-remove-magic-numbers
 
 	# more udpates
+	patches.drivers/alsa-hda-fix-01-add-missing-mux-for-vt1708
+	patches.drivers/alsa-hda-fix-02-mbp31-hp-fix
+
 	patches.drivers/alsa-hda-2.6.32-pre
 
 	patches.drivers/alsa-ctxfi-01-Native-timer-support-for-emu20k2
