- patches.arch/add_support_for_hpet_msi_intr_remap.patch:   intr-remap: generic support for remapping HPET MSIs   (bnc#532758). - patches.arch/add_x86_support_for_hpet_msi_intr_remap.patch:   x86: arch specific support for remapping HPET MSIs (bnc#532758).

--- a/series.conf
+++ b/series.conf
@@ -143,6 +143,9 @@
 +needs_update	patches.arch/x86_64-hpet-64bit-timer.patch
 +needs_to_go_away	patches.suse/x86-mark_rodata_rw.patch
 
+	patches.arch/add_support_for_hpet_msi_intr_remap.patch
+	patches.arch/add_x86_support_for_hpet_msi_intr_remap.patch
+
 	########################################################
 	# x86_64/4096CPUS - from SGI
 	########################################################
