--- a/series.conf
+++ b/series.conf
@@ -82,6 +82,7 @@
 	patches.fixes/kbuild-fix-generating-of-.symtypes-files
 	patches.suse/genksyms-add-override-flag.diff
 	patches.suse/kbuild-generate-modules.builtin
+	patches.suse/kbuild-rebuild-fix-for-Makefile.modbuiltin
 
         ########################################################
         # Simple export additions/removals
