- kabi/severities, rpm/kabi.pl, rpm/kernel-binary.spec.in, - rpm/kernel-source.spec.in: Use a simple script to check kabi by   comparing Module.symvers files (similar to the old SLES9 one). - rpm/built-in-where: Delete. - rpm/symsets.pl: Delete. - kabi/commonsyms: Delete. - kabi/usedsyms: Delete.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -35,7 +35,7 @@
 %define rpm_install_dir %buildroot%obj_install_dir
 %define kernel_build_dir %my_builddir/linux-obj
 
-%(chmod +x %_sourcedir/{arch-symbols,find-provides,guards,check-for-config-changes,check-supported-list,built-in-where,modversions,symsets.pl,split-modules})
+%(chmod +x %_sourcedir/{arch-symbols,find-provides,guards,check-for-config-changes,check-supported-list,modversions,kabi.pl,split-modules})
 
 %global cpu_arch %(%_sourcedir/arch-symbols %_target_cpu)
 %define cpu_arch_flavor %cpu_arch/%build_flavor
@@ -134,10 +134,9 @@ Source31:       guards
 Source33:       check-for-config-changes
 Source34:       check-supported-list
 Source40:       source-timestamp
-Source41:       built-in-where
 Source44:       find-provides
 Source46:       modversions
-Source47:       symsets.pl
+Source47:       kabi.pl
 Source48:       split-modules
 Source49:	kernel-spec-macros
 Source100:      config.tar.bz2
@@ -196,10 +195,6 @@ Obsoletes:      btusb-kmp
 
 # Will modules not listed in supported.conf abort the kernel build (0/1)?
 %define supported_modules_check 0
-
-# kABI change tolerance (default in maintenance should be 4, 6, 8 or 15,
-# 31 is the maximum; see scripts/kabi-checks)
-%define tolerate_kabi_changes 6
 
 %description
 @DESCRIPTION@
@@ -485,9 +480,6 @@ if [ %CONFIG_MODULES = y ]; then
     mkdir -p %buildroot/usr/src/linux-obj/%cpu_arch
     ln -s %build_flavor %buildroot/usr/src/linux-obj/%cpu_arch_flavor
 
-    # Figure out where the symbols that vmlinux exports are defined.
-    %_sourcedir/built-in-where < Module.symvers > Module.symvers.split
-
     gzip -c9 < Module.symvers > %buildroot/boot/symvers-%kernelrelease-%build_flavor.gz
 
     make modules_install $MAKE_ARGS INSTALL_MOD_PATH=%buildroot
@@ -564,20 +556,14 @@ if [ %CONFIG_MODULES = y ]; then
     ) > %my_builddir/base-modules
 %endif
 
-    # check for kabi changes
-    if [ -z "fixme-broken" ]; then
-        %_sourcedir/symsets.pl --check-kabi \
-            $reference \
-            --symvers=Module.symvers.split \
-            --modules=%my_builddir/base-modules-br \
-            --modules=%my_builddir/main-modules-br \
-            --modules=%my_builddir/unsupported-modules-br \
-            --commonsyms=%my_builddir/kabi/commonsyms \
-            --usedsyms=%my_builddir/kabi/usedsyms \
-            --severities=%my_builddir/kabi/severities \
-            --max-badness=%tolerate_kabi_changes
+    res=0%my_builddir/kabi/%cpu_arch/symvers-%build_flavor
+    if test -e %my_builddir/kabi/%cpu_arch/symvers-%build_flavor; then
+        # check for kabi changes
+        %_sourcedir/kabi.pl --rules %my_builddir/kabi/severities \
+            %my_builddir/kabi/%cpu_arch/symvers-%build_flavor \
+            Module.symvers || res=$?
     fi
-    if [ $? -ne 0 ]; then
+    if [ $res -ne 0 ]; then
 	if [ ! -e %my_builddir/kabi/%cpu_arch/ignore-%build_flavor -a \
 	     ! -e %_sourcedir/IGNORE-KABI-BADNESS ]; then
 	    echo "Create a file IGNORE-KABI-BADNESS in the kernel-source" \
