--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -65,13 +65,12 @@ Source34:       check-supported-list
 Source37:       README.SUSE
 Source38:       README.KSYMS
 Source40:       source-timestamp
-Source41:       built-in-where
 Source44:       find-provides
 Source46:       modversions
 Source47:       extract-modaliases
 Source48:       macros.kernel-source
 Source49:       kernel-module-subpackage
-Source50:       symsets.pl
+Source50:       kabi.pl
 Source51:       mkspec
 Source52:       kernel-source%variant.changes
 Source53:       kernel-source.spec.in
@@ -101,7 +100,7 @@ BuildRoot:      %{_tmppath}/%{name}-%{version}-build
 BuildArch:      noarch
 Prefix:         /usr/src
 
-%(chmod +x %_sourcedir/{guards,check-for-config-changes,symsets.pl,mkspec,compute-PATCHVERSION.sh,arch-symbols})
+%(chmod +x %_sourcedir/{guards,check-for-config-changes,kabi.pl,mkspec,compute-PATCHVERSION.sh,arch-symbols})
 
 %define symbols %(set -- $([ -e %_sourcedir/extra-symbols ] && cat %_sourcedir/extra-symbols) ; echo $*)
 %define variant_symbols %(case %name in (*-rt) echo "RT" ;; esac)
