- rpm/kernel-binary.spec.in: obsolete %name-base <= 2.6.31, the   previous <= 2.6.30-1 didn't catch some cases obviously   (bnc#533766).

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -70,8 +70,8 @@ BuildRequires:  fdupes
 Provides:       %{name}_%_target_cpu = %version-%release
 %if %split_base
 Provides:       kernel-base = %version-%source_rel
-# 2.6.30-1 was the last package with split -base
-Obsoletes:      %name-base <= 2.6.30-1
+# Obsolete the -base subpackage from 11.1 and 11.2 development phase
+Obsoletes:      %name-base <= 2.6.31
 %endif
 Requires(pre):  coreutils awk
 Requires(post): module-init-tools
