- rpm/kernel-binary.spec.in: require minimum versions of   module-init-tools and perl-Bootloader, the %post script is no   longer compatible with ancient versions.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -74,15 +74,15 @@ Provides:       kernel-base = %version-%source_rel
 Obsoletes:      %name-base <= 2.6.31
 %endif
 Requires(pre):  coreutils awk
-Requires(post): module-init-tools
+# Need a module-init-tools with /usr/lib/module-init-tools/weak-modules2
+Requires(post): module-init-tools >= 3.4
 # This Requires is wrong, because the post/postun scripts have a
 # test -x update-bootloader, having perl-Bootloader is not a hard requirement.
 # But, there is no way to tell rpm or yast to schedule the installation
 # of perl-Bootloader before kernel-binary.rpm if both are in the list of
 # packages to install/update. Likewise, this is true for mkinitrd.
-# A specific version of perl-Bootloader is not required, because the post/postun
-# scripts handle the two API versions of 10.1/SLES10 GA and 10.2/SLES10 SP1
-Requires(post): perl-Bootloader
+# Need a perl-Bootloader with /usr/lib/bootloader/bootloader_entry
+Requires(post): perl-Bootloader >= 0.4.15
 Requires(post): mkinitrd
 #!BuildIgnore:  perl-Bootloader mkinitrd
 
