- patches.fixes/scsi_dh-Provide-set_params-interface-in-emc-device-handler.patch:   scsi_dh: Provide set_params interface in emc device handler   (bnc#521607). - patches.fixes/scsi_dh-Use-scsi_dh_set_params-in-multipath.patch:   scsi_dh: Use scsi_dh_set_params() in multipath. (bnc#521607). - patches.fixes/scsi_dh-add-the-interface-scsi_dh_set_params.patch:   scsi_dh: add the interface scsi_dh_set_params() (bnc#521607).

--- a/series.conf
+++ b/series.conf
@@ -509,6 +509,10 @@
 +needs_update	patches.suse/dm-mpath-requeue-for-stopped-queue
 	patches.suse/dm-mpath-null-pgs
 	patches.fixes/dm-table-switch-to-readonly
+	patches.fixes/scsi_dh-add-the-interface-scsi_dh_set_params.patch
+	patches.fixes/scsi_dh-Provide-set_params-interface-in-emc-device-handler.patch
+	patches.fixes/scsi_dh-Use-scsi_dh_set_params-in-multipath.patch
+
 
 	########################################################
 	# md
