- Update to 2.6.31-rc9   - obsoletes:     - patches.drivers/alsa-hda-fix-01-add-missing-mux-for-vt1708     - patches.drivers/alsa-hda-fix-02-mbp31-hp-fix

--- a/series.conf
+++ b/series.conf
@@ -35,6 +35,7 @@
 	patches.kernel.org/patch-2.6.31-rc5-rc6
 	patches.kernel.org/patch-2.6.31-rc6-rc7
 	patches.kernel.org/patch-2.6.31-rc7-rc8
+	patches.kernel.org/patch-2.6.31-rc8-rc9
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -458,9 +459,6 @@
 	patches.drivers/alsa-midi-04-oss-remove-magic-numbers
 
 	# more udpates
-	patches.drivers/alsa-hda-fix-01-add-missing-mux-for-vt1708
-	patches.drivers/alsa-hda-fix-02-mbp31-hp-fix
-
 	patches.drivers/alsa-hda-2.6.32-pre
 
 	patches.drivers/alsa-ctxfi-01-Native-timer-support-for-emu20k2
