- patches.suse/block-seperate-rw-inflight-stats: Seperate read   and write statistics of in_flight requests (fate#306525).

--- a/series.conf
+++ b/series.conf
@@ -373,6 +373,8 @@
 
 	patches.fixes/scsi-check-host-lookup-failure
 
+	patches.suse/block-seperate-rw-inflight-stats
+
 	# Remaining SCSI patches (garloff)
 	patches.suse/scsi-error-test-unit-ready-timeout
 	patches.fixes/scsi-scan-blist-update
