Backport patches from 2.6.32-rc to ease ossp testing.
- Update config files - SOUND_OSS_CORE_PRECLAIM is set to N.
- patches.drivers/implement-register_chrdev: chrdev: implement
  __register_chrdev().
- patches.drivers/sound-make-oss-device-number-claiming-optional:
  sound: make OSS device number claiming optional and schedule
  its removal.
- patches.drivers/sound-request-char-major-aliases-for-oss-devices:
  sound: request char-major-* module aliases for missing OSS
  devices.

--- a/series.conf
+++ b/series.conf
@@ -467,6 +467,11 @@
 	patches.drivers/alsa-usb-05-use-multiple-output-URBs
 	patches.drivers/alsa-usb-06-add-MIDI-drain-callback
 
+	# backported from 2.6.32 for OSSP
+	patches.drivers/implement-register_chrdev
+	patches.drivers/sound-request-char-major-aliases-for-oss-devices
+	patches.drivers/sound-make-oss-device-number-claiming-optional
+
 	########################################################
 	# Other driver fixes
 	########################################################
