Backport attach inhibition for builtin pci drivers from 2.6.32-rc.
- patches.drivers/pci-separate-out-pci_add_dynid: pci: separate
  out pci_add_dynid().
- patches.drivers/pci_stub-add-ids-parameter: pci-stub: add
  pci_stub.ids parameter.

--- a/series.conf
+++ b/series.conf
@@ -419,6 +419,8 @@
 	########################################################
 	# PCI and PCI hotplug
 	########################################################
+	patches.drivers/pci-separate-out-pci_add_dynid
+	patches.drivers/pci_stub-add-ids-parameter
 
 	########################################################
 	# sysfs / driver core
