- Update Xen patches to 2.6.31 final.

--- a/series.conf
+++ b/series.conf
@@ -685,10 +685,7 @@
 	patches.xen/xen3-patch-2.6.28
 	patches.xen/xen3-patch-2.6.29
 	patches.xen/xen3-patch-2.6.30
-	patches.xen/xen3-patch-2.6.31-rc4
-	patches.xen/xen3-patch-2.6.31-rc4-rc5
-	patches.xen/xen3-patch-2.6.31-rc5-rc6
-	patches.xen/xen3-patch-2.6.31-rc7-rc8
+	patches.xen/xen3-patch-2.6.31
 	patches.xen/xen3-seccomp-disable-tsc-option
 +needs_to_go_away	patches.xen/xen3-x86-mark_rodata_rw.patch
 	patches.xen/xen3-use-totalram_pages
