- patches.drivers/alsa-hda-2.6.32-rc1: ALSA HD-audio backport   from 2.6.32-rc1.

--- a/series.conf
+++ b/series.conf
@@ -455,6 +455,7 @@
 
 	# more udpates
 	patches.drivers/alsa-hda-2.6.32-pre
+	patches.drivers/alsa-hda-2.6.32-rc1
 
 	patches.drivers/alsa-ctxfi-01-Native-timer-support-for-emu20k2
 	patches.drivers/alsa-ctxfi-03-Simple-code-clean-up
