- patches.arch/acpi_srat-pxm-rev-ia64.patch: Use SRAT table rev   to use 8bit or 16/32bit PXM fields (ia64) (bnc#503038). - patches.arch/acpi_srat-pxm-rev-store.patch: Store SRAT table   revision (bnc#503038). - patches.arch/acpi_srat-pxm-rev-x86-64.patch: Use SRAT table   rev to use 8bit or 32bit PXM fields (x86-64) (bnc#503038).

--- a/series.conf
+++ b/series.conf
@@ -245,6 +245,10 @@
 	# for example SLE11 specific BIOS updates (if there is no other
 	# way to safely solve an ACPI issue).
 +trenn	patches.suse/acpi_osi_sle11_ident.patch
+	patches.arch/acpi_srat-pxm-rev-store.patch
+	patches.arch/acpi_srat-pxm-rev-ia64.patch
+	patches.arch/acpi_srat-pxm-rev-x86-64.patch
+
 
 	########################################################
 	# CPUFREQ
