--- a/series.conf
+++ b/series.conf
@@ -297,6 +297,7 @@
 	########################################################
 	# Reiserfs Patches
 	########################################################
+	patches.fixes/reiserfs-replay-honor-ro
 	patches.suse/reiserfs-barrier-default
 
 	########################################################
