- patches.suse/acpi-dsdt-initrd-v0.9a-2.6.25.patch: Ported to   2.6.31 (bnc#533555).

--- a/series.conf
+++ b/series.conf
@@ -233,7 +233,7 @@
 	# Check resource conflicts between hwmon and ACPI OpRegs
 	patches.arch/acpi_thinkpad_introduce_acpi_root_table_boot_param.patch
 
-+needs_update	patches.suse/acpi-dsdt-initrd-v0.9a-2.6.25.patch
+	patches.suse/acpi-dsdt-initrd-v0.9a-2.6.25.patch
 
 	patches.arch/acpi_thermal_passive_blacklist.patch
 	patches.arch/acpi-export-hotplug_execute
