- rpm/kernel-binary.spec.in: obsolete the sle11 ocfs2-kmp.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -189,6 +189,8 @@ Obsoletes:      ivtv-kmp
 Obsoletes:      at76_usb-kmp
 Obsoletes:      pcc-acpi-kmp
 Obsoletes:      btusb-kmp
+# sle11
+Obsoletes:      ocfs2-kmp
 
 # Provide the exported symbols as "ksym(symbol) = hash"
 %define __find_provides %_sourcedir/find-provides %name
