- rpm/kernel-binary.spec.in: obsolete quickcam-kmp (bnc#543361).

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -191,6 +191,8 @@ Obsoletes:      pcc-acpi-kmp
 Obsoletes:      btusb-kmp
 # sle11
 Obsoletes:      ocfs2-kmp
+# 11.1
+Obsoletes:      quickcam-kmp < 0.6.7
 
 # Provide the exported symbols as "ksym(symbol) = hash"
 %define __find_provides %_sourcedir/find-provides %name
