- patches.drivers/alsa-ctxfi-04-fix-surround-side-mute: ALSA:   ctxfi: Swapped SURROUND-SIDE mute. - patches.drivers/alsa-hda-2.6.32-rc1-toshiba-fix: ALSA: hda -   Added quirk to enable sound on Toshiba NB200. - patches.drivers/alsa-hda-2.6.32-rc2: ALSA: backport 2.6.32-rc2   fixes for HD-audio.

--- a/series.conf
+++ b/series.conf
@@ -461,9 +461,12 @@
 	# more udpates
 	patches.drivers/alsa-hda-2.6.32-pre
 	patches.drivers/alsa-hda-2.6.32-rc1
+	patches.drivers/alsa-hda-2.6.32-rc1-toshiba-fix
+	patches.drivers/alsa-hda-2.6.32-rc2
 
 	patches.drivers/alsa-ctxfi-01-Native-timer-support-for-emu20k2
 	patches.drivers/alsa-ctxfi-03-Simple-code-clean-up
+	patches.drivers/alsa-ctxfi-04-fix-surround-side-mute
 
 	patches.drivers/alsa-ice-01-Patch-for-suspend-resume-for-Audiotrak
 	patches.drivers/alsa-ice-02-Fix-section-mismatch
