--- a/series.conf
+++ b/series.conf
@@ -462,6 +462,7 @@
 	patches.drivers/alsa-hda-2.6.32-rc1
 	patches.drivers/alsa-hda-2.6.32-rc1-toshiba-fix
 	patches.drivers/alsa-hda-2.6.32-rc2
+	patches.drivers/alsa-hda-alc861-toshiba-fix
 
 	patches.drivers/alsa-ctxfi-01-Native-timer-support-for-emu20k2
 	patches.drivers/alsa-ctxfi-03-Simple-code-clean-up
