- Update Xen patches to 2.6.31.2.

--- a/series.conf
+++ b/series.conf
@@ -698,6 +698,7 @@
 	patches.xen/xen3-patch-2.6.30
 	patches.xen/xen3-patch-2.6.31
 	patches.xen/xen3-patch-2.6.31.1
+	patches.xen/xen3-patch-2.6.31.1-2
 	patches.xen/xen3-seccomp-disable-tsc-option
 +needs_to_go_away	patches.xen/xen3-x86-mark_rodata_rw.patch
 	patches.xen/xen3-use-totalram_pages
