- patches.drivers/alsa-hda-alc268-automic-fix: ALSA: hda -   Fix yet another auto-mic bug in ALC268 (bnc#544899).

--- a/series.conf
+++ b/series.conf
@@ -464,6 +464,7 @@
 	patches.drivers/alsa-hda-2.6.32-rc2
 	patches.drivers/alsa-hda-alc861-toshiba-fix
 	patches.drivers/alsa-hda-alc660vd-asus-a7k-fix
+	patches.drivers/alsa-hda-alc268-automic-fix
 
 	patches.drivers/alsa-ctxfi-01-Native-timer-support-for-emu20k2
 	patches.drivers/alsa-ctxfi-03-Simple-code-clean-up
