- patches.rpmify/iio-s390-build-fix: iio: Don't build on s390.

--- a/series.conf
+++ b/series.conf
@@ -44,6 +44,7 @@
 +needs_update-32	patches.rpmify/spin_is_contended-fix
 	patches.rpmify/arm-arch_include_asm-fix.diff
 	patches.rpmify/winbond-build-fixes
+	patches.rpmify/iio-s390-build-fix
 
         ########################################################
         # kABI consistency patches
