- patches.suse/kdb-x86-build-fixes: kdb: Use $srctree not $TOPDIR   in Makefile.

--- a/series.conf
+++ b/series.conf
@@ -513,6 +513,7 @@
 	patches.suse/kdb-ia64
 +still_needed?	patches.suse/kdb-serial-8250
 	patches.suse/kdb-build-fixes
+	patches.suse/kdb-x86-build-fixes
 
         ########################################################
         # Other patches for debugging
