- patches.rpmify/tsi148-dependency: vme/tsi148: Depend on VIRT_TO_BUS

--- a/series.conf
+++ b/series.conf
@@ -47,6 +47,7 @@
 	patches.rpmify/winbond-prepare_multicast
 	patches.rpmify/iio-s390-build-fix
 	patches.rpmify/rtl8192e-build-fixes
+	patches.rpmify/tsi148-dependency
 
         ########################################################
         # kABI consistency patches
