--- a/series.conf
+++ b/series.conf
@@ -118,7 +118,7 @@
         ########################################################
 	patches.fixes/ia64-sparse-fixes.diff
 	patches.fixes/nr-irqs-file
-+needs_update-32	patches.arch/mm-avoid-bad-page-on-lru
+	patches.arch/mm-avoid-bad-page-on-lru
 	patches.arch/ia64-page-migration
 	patches.arch/ia64-page-migration.fix
 	patches.fixes/taskstats-alignment
