- patches.suse/kbuild-icecream-workaround: Refresh and re-enable.

--- a/series.conf
+++ b/series.conf
@@ -76,7 +76,7 @@
 	patches.suse/supported-flag
 	patches.suse/supported-flag-sysfs
 	patches.suse/supported-flag-enterprise
-+needs_update-32	patches.suse/kbuild-icecream-workaround
+	patches.suse/kbuild-icecream-workaround
 	patches.fixes/kbuild-fix-generating-of-.symtypes-files
 	patches.suse/genksyms-add-override-flag.diff
 	patches.suse/kbuild-generate-modules.builtin
@@ -139,7 +139,7 @@
         ########################################################
 	patches.arch/x86-self-ptrace.patch
 	patches.arch/x86-hpet-pre-read
-+needs_update	patches.arch/x86_64-hpet-64bit-timer.patch
+	patches.arch/x86_64-hpet-64bit-timer.patch
 
 	patches.arch/add_support_for_hpet_msi_intr_remap.patch
 	patches.arch/add_x86_support_for_hpet_msi_intr_remap.patch
