- patches.fixes/scsi-add-tgps-setting: Refresh and re-enable.

--- a/series.conf
+++ b/series.conf
@@ -376,7 +376,7 @@
 +needs_update	patches.drivers/qla4xxx-5.01.00-k8_sles11-03-update
 	patches.fixes/scsi-skip-nonscsi-device-for-dma
 	patches.fixes/scsi-dh-alua-retry-UA
-+needs_update-32	patches.fixes/scsi-add-tgps-setting
+	patches.fixes/scsi-add-tgps-setting
 	patches.fixes/scsi-dh-alua-send-stpg
 
 	patches.fixes/scsi-check-host-lookup-failure
