- patches.apparmor/apparmor.diff: Refresh and enable.

--- a/series.conf
+++ b/series.conf
@@ -495,8 +495,8 @@
 	##########################################################
 	# AppArmor
 	##########################################################
-+needs_update-32	patches.apparmor/apparmor.diff
-+needs_update-32	patches.apparmor/security-default-lsm
+	patches.apparmor/apparmor.diff
+	patches.apparmor/security-default-lsm
 
 	########################################################
 	# Address space layout randomization
