- Updated to 2.6.32-rc4.   - Eliminated 4 patches.   - Refreshed context.

--- a/series.conf
+++ b/series.conf
@@ -29,6 +29,7 @@
 	########################################################
 	patches.kernel.org/patch-2.6.32-rc1
 	patches.kernel.org/patch-2.6.32-rc1-rc3
+	patches.kernel.org/patch-2.6.32-rc3-rc4
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -43,10 +44,6 @@
 	patches.kernel.org/gdth-section-conflict
 	patches.kernel.org/arch-include-asm-fixes
 	patches.rpmify/arm-arch_include_asm-fix.diff
-	patches.rpmify/winbond_beacon_timers
-	patches.rpmify/winbond-prepare_multicast
-	patches.rpmify/iio-s390-build-fix
-	patches.rpmify/rtl8192e-build-fixes
 	patches.rpmify/tsi148-dependency
 
         ########################################################
