- patches.apparmor/ptrace_may_access-fix: apparmor:   ptrace_may_access -> ptrace_access_check.

--- a/series.conf
+++ b/series.conf
@@ -493,6 +493,7 @@
 	# AppArmor
 	##########################################################
 	patches.apparmor/apparmor.diff
+	patches.apparmor/ptrace_may_access-fix
 	patches.apparmor/security-default-lsm
 
 	########################################################
