--- a/series.conf
+++ b/series.conf
@@ -45,6 +45,7 @@
 	patches.kernel.org/arch-include-asm-fixes
 	patches.rpmify/arm-arch_include_asm-fix.diff
 	patches.rpmify/tsi148-dependency
+	patches.rpmify/staging-missing-sched.h
 
         ########################################################
         # kABI consistency patches
