- Update Xen patches to 2.6.32-rc4 and c/s 938. - config.conf: Re-enable Xen. - Update x86 config files.

--- a/series.conf
+++ b/series.conf
@@ -594,101 +594,99 @@
 # re-basing to a newer xen tree.
 #
 	### both uml framebuffer and xen need this one.
-+xen_needs_updating	patches.xen/add-console-use-vt
-+xen_needs_updating
+	patches.xen/add-console-use-vt
+
 	# split out patches
-+xen_needs_updating	patches.xen/linux-2.6.19-rc1-kexec-move_segment_code-i386.patch
-+xen_needs_updating	patches.xen/linux-2.6.19-rc1-kexec-move_segment_code-x86_64.patch
-+xen_needs_updating	patches.xen/ipv6-no-autoconf
-+xen_needs_updating	patches.xen/pci-guestdev
-+xen_needs_updating	patches.xen/pci-reserve
-+xen_needs_updating	patches.xen/sfc-driverlink
-+xen_needs_updating	patches.xen/sfc-resource-driver
-+xen_needs_updating	patches.xen/sfc-driverlink-conditional
-+xen_needs_updating	patches.xen/sfc-external-sram
-+xen_needs_updating	patches.xen/tmem
+	patches.xen/linux-2.6.19-rc1-kexec-move_segment_code-i386.patch
+	patches.xen/linux-2.6.19-rc1-kexec-move_segment_code-x86_64.patch
+	patches.xen/ipv6-no-autoconf
+	patches.xen/pci-guestdev
+	patches.xen/pci-reserve
+	patches.xen/sfc-driverlink
+	patches.xen/sfc-resource-driver
+	patches.xen/sfc-driverlink-conditional
+	patches.xen/sfc-external-sram
+	patches.xen/tmem
 
 	# bulk stuff, new files for xen
-+xen_needs_updating	patches.xen/xen3-auto-xen-arch.diff
-+xen_needs_updating	patches.xen/xen3-auto-xen-drivers.diff
-+xen_needs_updating	patches.xen/xen3-auto-include-xen-interface.diff
+	patches.xen/xen3-auto-xen-arch.diff
+	patches.xen/xen3-auto-xen-drivers.diff
+	patches.xen/xen3-auto-include-xen-interface.diff
 
 	# kconfig bits for xen
-+xen_needs_updating	patches.xen/xen3-auto-xen-kconfig.diff
+	patches.xen/xen3-auto-xen-kconfig.diff
 
 	# common code changes
-+xen_needs_updating	patches.xen/xen3-auto-common.diff
-+xen_needs_updating	patches.xen/xen3-auto-arch-x86.diff
-+xen_needs_updating	patches.xen/xen3-auto-arch-i386.diff
-+xen_needs_updating	patches.xen/xen3-auto-arch-x86_64.diff
+	patches.xen/xen3-auto-common.diff
+	patches.xen/xen3-auto-arch-x86.diff
+	patches.xen/xen3-auto-arch-i386.diff
+	patches.xen/xen3-auto-arch-x86_64.diff
 
 	# fixups due to upstream Xen parts
-+xen_needs_updating	patches.xen/xen3-fixup-xen
+	patches.xen/xen3-fixup-xen
 
-+xen_needs_updating	patches.xen/sfc-sync-headers
-+xen_needs_updating	patches.xen/sfc-endianness
+	patches.xen/sfc-sync-headers
+	patches.xen/sfc-endianness
 
 	# newer changeset backports
 
 	# changes outside arch/{i386,x86_64}/xen
-+xen_needs_updating	patches.xen/xen3-fixup-kconfig
-+xen_needs_updating	patches.xen/xen3-fixup-common
-+xen_needs_updating	patches.xen/xen3-fixup-arch-x86
+	patches.xen/xen3-fixup-kconfig
+	patches.xen/xen3-fixup-common
+	patches.xen/xen3-fixup-arch-x86
 
 	# ports of other patches
-+xen_needs_updating	patches.xen/xen3-patch-2.6.18
-+xen_needs_updating	patches.xen/xen3-patch-2.6.19
-+xen_needs_updating	patches.xen/xen3-patch-2.6.20
-+xen_needs_updating	patches.xen/xen3-patch-2.6.21
-+xen_needs_updating	patches.xen/xen3-patch-2.6.22
-+xen_needs_updating	patches.xen/xen3-patch-2.6.23
-+xen_needs_updating	patches.xen/xen3-patch-2.6.24
-+xen_needs_updating	patches.xen/xen3-patch-2.6.25
-+xen_needs_updating	patches.xen/xen3-patch-2.6.26
-+xen_needs_updating	patches.xen/xen3-patch-2.6.27
-+xen_needs_updating	patches.xen/xen3-patch-2.6.28
-+xen_needs_updating	patches.xen/xen3-patch-2.6.29
-+xen_needs_updating	patches.xen/xen3-patch-2.6.30
-+xen_needs_updating	patches.xen/xen3-patch-2.6.31
-+xen_needs_updating	patches.xen/xen3-patch-2.6.31.1
-+xen_needs_updating	patches.xen/xen3-patch-2.6.31.1-2
-+xen_needs_updating	patches.xen/xen3-seccomp-disable-tsc-option
-+xen_needs_updating	patches.xen/xen3-use-totalram_pages
-+xen_needs_updating	patches.xen/xen3-kdb-x86
-+xen_needs_updating	patches.xen/xen3-stack-unwind
-+xen_needs_updating	patches.xen/xen3-x86_64-unwind-annotations
+	patches.xen/xen3-patch-2.6.18
+	patches.xen/xen3-patch-2.6.19
+	patches.xen/xen3-patch-2.6.20
+	patches.xen/xen3-patch-2.6.21
+	patches.xen/xen3-patch-2.6.22
+	patches.xen/xen3-patch-2.6.23
+	patches.xen/xen3-patch-2.6.24
+	patches.xen/xen3-patch-2.6.25
+	patches.xen/xen3-patch-2.6.26
+	patches.xen/xen3-patch-2.6.27
+	patches.xen/xen3-patch-2.6.28
+	patches.xen/xen3-patch-2.6.29
+	patches.xen/xen3-patch-2.6.30
+	patches.xen/xen3-patch-2.6.31
+	patches.xen/xen3-patch-2.6.32-rc4
+	patches.xen/xen3-seccomp-disable-tsc-option
+	patches.xen/xen3-kdb-x86
+	patches.xen/xen3-stack-unwind
+	patches.xen/xen3-x86_64-unwind-annotations
 
 	# bugfixes and enhancements
-+xen_needs_updating	patches.xen/xen-balloon-max-target
-+xen_needs_updating	patches.xen/xen-modular-blktap
-+xen_needs_updating	patches.xen/xen-blkback-bimodal-suse
-+xen_needs_updating	patches.xen/xen-blkif-protocol-fallback-hack
-+xen_needs_updating	patches.xen/xen-blkback-cdrom
-+xen_needs_updating	patches.xen/xen-blktap-write-barriers
-+xen_needs_updating	patches.xen/xen-scsifront-block-timeout-update
-+xen_needs_updating	patches.xen/xen-op-packet
-+xen_needs_updating	patches.xen/xen-blkfront-cdrom
-+xen_needs_updating	patches.xen/xen-sections
-+xen_needs_updating	patches.xen/xen-swiotlb-heuristics
-+xen_needs_updating	patches.xen/xen-kconfig-compat
-+xen_needs_updating	patches.xen/xen-cpufreq-report
-+xen_needs_updating	patches.xen/xen-staging-build
-+xen_needs_updating	patches.xen/xen-sysdev-suspend
-+xen_needs_updating	patches.xen/xen-ipi-per-cpu-irq
-+xen_needs_updating	patches.xen/xen-virq-per-cpu-irq
-+xen_needs_updating	patches.xen/xen-configurable-guest-devices
-+xen_needs_updating	patches.xen/xen-netback-nr-irqs
-+xen_needs_updating	patches.xen/xen-netback-notify-multi
-+xen_needs_updating	patches.xen/xen-x86-panic-no-reboot
-+xen_needs_updating	patches.xen/xen-x86-dcr-fallback
-+xen_needs_updating	patches.xen/xen-x86-consistent-nmi
-+xen_needs_updating	patches.xen/xen-x86-no-lapic
-+xen_needs_updating	patches.xen/xen-x86-pmd-handling
-+xen_needs_updating	patches.xen/xen-x86-bigmem
-+xen_needs_updating	patches.xen/xen-x86-machphys-prediction
-+xen_needs_updating	patches.xen/xen-x86-exit-mmap
-+xen_needs_updating	patches.xen/xen-x86-per-cpu-vcpu-info
-+xen_needs_updating	patches.xen/xen-x86_64-pgd-pin
-+xen_needs_updating	patches.xen/xen-x86_64-pgd-alloc-order
-+xen_needs_updating	patches.xen/xen-x86_64-dump-user-pgt
-+xen_needs_updating	patches.xen/xen-x86_64-note-init-p2m
+	patches.xen/xen-balloon-max-target
+	patches.xen/xen-modular-blktap
+	patches.xen/xen-blkback-bimodal-suse
+	patches.xen/xen-blkif-protocol-fallback-hack
+	patches.xen/xen-blkback-cdrom
+	patches.xen/xen-blktap-write-barriers
+	patches.xen/xen-scsifront-block-timeout-update
+	patches.xen/xen-op-packet
+	patches.xen/xen-blkfront-cdrom
+	patches.xen/xen-sections
+	patches.xen/xen-swiotlb-heuristics
+	patches.xen/xen-kconfig-compat
+	patches.xen/xen-cpufreq-report
+	patches.xen/xen-staging-build
+	patches.xen/xen-sysdev-suspend
+	patches.xen/xen-ipi-per-cpu-irq
+	patches.xen/xen-virq-per-cpu-irq
+	patches.xen/xen-configurable-guest-devices
+	patches.xen/xen-netback-nr-irqs
+	patches.xen/xen-netback-notify-multi
+	patches.xen/xen-x86-panic-no-reboot
+	patches.xen/xen-x86-dcr-fallback
+	patches.xen/xen-x86-consistent-nmi
+	patches.xen/xen-x86-no-lapic
+	patches.xen/xen-x86-pmd-handling
+	patches.xen/xen-x86-bigmem
+	patches.xen/xen-x86-machphys-prediction
+	patches.xen/xen-x86-exit-mmap
+	patches.xen/xen-x86-per-cpu-vcpu-info
+	patches.xen/xen-x86_64-pgd-pin
+	patches.xen/xen-x86_64-pgd-alloc-order
+	patches.xen/xen-x86_64-dump-user-pgt
+	patches.xen/xen-x86_64-note-init-p2m
