--- a/series.conf
+++ b/series.conf
@@ -30,6 +30,7 @@
 	patches.kernel.org/patch-2.6.32-rc1
 	patches.kernel.org/patch-2.6.32-rc1-rc3
 	patches.kernel.org/patch-2.6.32-rc3-rc4
+	patches.kernel.org/patch-2.6.32-rc4-rc5
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
