- rpm/kernel-binary.spec.in: [s390x] ignore errors from   dwarfextract for now.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -425,7 +425,7 @@ add_vmlinux()
     cp -p arch/s390/boot/image %buildroot/boot/image-%kernelrelease-%build_flavor
     image=image
     if [ -x "$(which dwarfextract 2>/dev/null)" ] ; then
-	dwarfextract vmlinux %buildroot/boot/Kerntypes-%kernelrelease-%build_flavor
+	dwarfextract vmlinux %buildroot/boot/Kerntypes-%kernelrelease-%build_flavor || echo "dwarfextract failed ($?)"
     fi
 %if %CONFIG_KMSG_IDS == "y"
     mkdir -p %buildroot/usr/share/man/man9
@@ -500,7 +500,7 @@ if [ %CONFIG_MODULES = y ]; then
     if [ -x "$(which dwarfextract 2>/dev/null)" -a \
 	-f %buildroot/boot/Kerntypes-%kernelrelease-%build_flavor ] ; then
 	find %buildroot -name "*.ko" > kofiles.list
-	dwarfextract %buildroot/boot/Kerntypes-%kernelrelease-%build_flavor -C kofiles.list
+	dwarfextract %buildroot/boot/Kerntypes-%kernelrelease-%build_flavor -C kofiles.list || echo "dwarfextract failed ($?)"
     fi
 %endif
 
