--- a/series.conf
+++ b/series.conf
@@ -442,6 +442,7 @@
 	# Input & Console
 	########################################################
 	patches.suse/bootsplash
+	patches.suse/Cleanup-and-make-boot-splash-work-with-KMS.patch
 	patches.drivers/elousb.patch
 	patches.fixes/input-add-acer-aspire-5710-to-nomux.patch
 
