--- a/series.conf
+++ b/series.conf
@@ -105,6 +105,7 @@
 +needs_update-32	patches.suse/sysctl-add-affinity_load_balancing
 	patches.fixes/seccomp-disable-tsc-option
 	patches.suse/self-ptrace.patch
+	patches.fixes/percpu-allow-pcpu_alloc-to-be-called-with-IRQs-off
 	patches.fixes/sched-move-rq_weight-data-array-out-of-percpu
 
         ########################################################
