- Update config files (MINIX_FS=m globally, NTFS_FS off for -ec2). - supported.conf: Add fs/minix.

--- a/supported.conf
+++ b/supported.conf
@@ -1926,6 +1926,7 @@
 +external	kernel/fs/jfs/jfs					# The Journaled Filesystem (JFS), supported by IBM
 		kernel/fs/lockd/lockd
 +base		kernel/fs/mbcache
+		kernel/fs/minix
 		kernel/fs/msdos/msdos
 		kernel/fs/ncpfs/ncpfs
 		kernel/fs/nfs_common/nfs_acl
