- patches.fixes/nfsd-acl.patch: nfsd: Fix sort_pacl in   fs/nfsd/nf4acl.c to actually sort groups (bnc#549748).

--- a/series.conf
+++ b/series.conf
@@ -281,6 +281,7 @@
 	########################################################
 	# NFS
 	########################################################
+	patches.fixes/nfsd-acl.patch
 
 	########################################################
 	# lockd + statd
