- rpm/kernel-binary.spec.in: obsolete kmps by their full name, not   just the foo-kmp virtual dependency (bnc#472410).

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -175,26 +175,26 @@ NoSource:       120
 
 # The following KMPs have been integrated into the kernel package.
 # sles10 / 10.3
-Obsoletes:      iwlwifi-kmp
-Obsoletes:      ipw3945-kmp
+Obsoletes:      iwlwifi-kmp-%build_flavor
+Obsoletes:      ipw3945-kmp-%build_flavor
 # sles10 / 11.0
-Obsoletes:      uvcvideo-kmp
+Obsoletes:      uvcvideo-kmp-%build_flavor
 # 10.3
-Obsoletes:      adm8211-kmp
-Obsoletes:      rt2x00-kmp
-Obsoletes:      rfswitch-kmp
+Obsoletes:      adm8211-kmp-%build_flavor
+Obsoletes:      rt2x00-kmp-%build_flavor
+Obsoletes:      rfswitch-kmp-%build_flavor
 # 11.0
-Obsoletes:      atl2-kmp
-Obsoletes:      wlan-ng-kmp
-Obsoletes:      et131x-kmp
-Obsoletes:      ivtv-kmp
-Obsoletes:      at76_usb-kmp
-Obsoletes:      pcc-acpi-kmp
-Obsoletes:      btusb-kmp
+Obsoletes:      atl2-kmp-%build_flavor
+Obsoletes:      wlan-ng-kmp-%build_flavor
+Obsoletes:      et131x-kmp-%build_flavor
+Obsoletes:      ivtv-kmp-%build_flavor
+Obsoletes:      at76_usb-kmp-%build_flavor
+Obsoletes:      pcc-acpi-kmp-%build_flavor
+Obsoletes:      btusb-kmp-%build_flavor
 # sle11
-Obsoletes:      ocfs2-kmp
+Obsoletes:      ocfs2-kmp-%build_flavor
 # 11.1
-Obsoletes:      quickcam-kmp < 0.6.7
+Obsoletes:      quickcam-kmp-%build_flavor < 0.6.7
 
 # Provide the exported symbols as "ksym(symbol) = hash"
 %define __find_provides %_sourcedir/find-provides %name
