- rpm/kernel-binary.spec.in: obsolete enic-kmp and fnic-kmp.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -191,6 +191,9 @@ Obsoletes:      ivtv-kmp-%build_flavor
 Obsoletes:      at76_usb-kmp-%build_flavor
 Obsoletes:      pcc-acpi-kmp-%build_flavor
 Obsoletes:      btusb-kmp-%build_flavor
+# sle11-ga
+Obsoletes:      enic-kmp-%build_flavor
+Obsoletes:      fnic-kmp-%build_flavor
 # sle11
 Obsoletes:      ocfs2-kmp-%build_flavor
 # 11.1
