- rpm/kernel-binary.spec.in: delete stray text.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -566,7 +566,7 @@ if [ %CONFIG_MODULES = y ]; then
     ) > %my_builddir/base-modules
 %endif
 
-    res=0%my_builddir/kabi/%cpu_arch/symvers-%build_flavor
+    res=0
     if test -e %my_builddir/kabi/%cpu_arch/symvers-%build_flavor; then
         # check for kabi changes
         %_sourcedir/kabi.pl --rules %my_builddir/kabi/severities \
