--- a/config.conf
+++ b/config.conf
@@ -11,7 +11,7 @@
 +i386		i386/default
 +i386		i386/desktop
 +i386		i386/pae
-+i386		i386/debug
++i386 -syms	i386/debug
 +i386		i386/xen
 +i386 -syms	i386/ec2
 +i386 		i386/vanilla
@@ -26,7 +26,7 @@
 +x86_64		x86_64/desktop
 +x86_64		x86_64/xen
 +x86_64	-syms	x86_64/ec2
-+x86_64		x86_64/debug
++x86_64	-syms	x86_64/debug
 +x86_64		x86_64/vanilla
 +x86_64 -syms	x86_64/trace
 
@@ -38,7 +38,7 @@
 # G5 PS3 pSeries
 +ppc		ppc/ppc64
 # PS3 bootloader
-+ppc		ppc/ps3
++ppc -syms	ppc/ps3
 # maybe the kernels above were patched to death?
 +ppc		ppc/vanilla
 
@@ -52,7 +52,7 @@
 +ppc64 -syms	ppc64/kdump
 # G5 pSeries
 +ppc64		ppc64/ppc64
-+ppc64		ppc64/debug
++ppc64 -syms	ppc64/debug
 # maybe the kernels above were patched to death?
 +ppc64		ppc64/vanilla
 
